# airsspec

./: .gitignore  AGENTS.md  AIRSDLC.md  CLAUDE.md  Cargo.toml  README.md
.agent/workflows/: airsspec-construction.md  airsspec-design.md  airsspec-feature.md  airsspec-hotfix.md  airsspec-inception.md  airsspec-planning.md  airsspec-research.md  airsspec-reviewer.md  airsspec-setup.md  airsspec.md  git-commit.md  notebook.md
.aiassisted/guidelines/rust/: adt-patterns.md  project-standard.md
.airsspec/: ROADMAP.md  WORKSPACE.md  airsspec.toml
.airsspec/agent/core/: README.md  path-variables.md  prompt-guidelines.md  validators.md  workspace-setup.md
.airsspec/agent/phases/: construction.md  inception.md
.airsspec/agent/system/: default.md
.airsspec/agent/workflows/: feature.md
.airsspec/sources/: SOURCES.md  ai-dlc-analysis.md  rig-integration.md  spec-framework-analysis.md
.airsspec/uow/UOW-001-foundation/: DAA.md  RFC.md  requirements.md  status.yaml
.airsspec/uow/UOW-001-foundation/adrs/: ADR-001-primitives.md  ADR-002-contract.md  ADR-003-cognition.md  ADR-004-agent.md
.airsspec/uow/UOW-001-foundation/bolts/BOLT-001-primitives/: status.yaml
.airsspec/uow/UOW-001-foundation/bolts/BOLT-002-contract/: status.yaml
.airsspec/uow/UOW-002-agent-system/: DAA.md  RFC.md  requirements.md  status.yaml
.airsspec/uow/UOW-002-agent-system/adrs/: ADR-001-llm-integration.md  ADR-002-tool-system.md  ADR-003-agent-architecture.md
.airsspec/uow/fix-librs-reexports/: status.yaml
.opencode/agent/: airsspec-architect.md  airsspec-builder.md  airsspec-feature.md  airsspec-hotfix.md  airsspec-manager.md  airsspec-researcher.md  airsspec-reviewer.md  airsspec-setup.md  airsspec-spec-writer.md  airsspec.md  git-commit.md  notebook.md
crates/airsspec-artifacts/: Cargo.toml
crates/airsspec-artifacts/schemas/: adr.schema.json  bolt-plan.schema.json  daa.schema.json  requirements.schema.json  rfc.schema.json
crates/airsspec-artifacts/src/: lib.rs  persistence.rs  validators.rs
crates/airsspec-cli/: Cargo.toml
crates/airsspec-cli/src/: cli.rs  main.rs
crates/airsspec-cli/src/commands/: init.rs  mcp.rs  mod.rs  validate.rs
crates/airsspec-cli/tests/: cli_integration_tests.rs
crates/airsspec-core/: Cargo.toml
crates/airsspec-core/src/: error.rs  lib.rs
crates/airsspec-core/src/agent/: mod.rs  traits.rs  types.rs
crates/airsspec-core/src/artifact/: mod.rs  traits.rs  types.rs
crates/airsspec-core/src/knowledge/: mod.rs  traits.rs  types.rs
crates/airsspec-core/src/llm/: mod.rs  traits.rs  types.rs
crates/airsspec-core/src/memory/: mod.rs  traits.rs  types.rs
crates/airsspec-core/src/plan/: builder.rs  error.rs  mod.rs  step.rs  storage.rs  types.rs  validatable.rs  validator.rs
crates/airsspec-core/src/plugin/: mod.rs  traits.rs  types.rs
crates/airsspec-core/src/reasoning/: mod.rs  traits.rs  types.rs
crates/airsspec-core/src/shared/: lifecycle.rs  mod.rs  phase.rs
crates/airsspec-core/src/spec/: builder.rs  category.rs  dependency.rs  error.rs  id.rs  mod.rs  storage.rs  types.rs  validatable.rs  validator.rs
crates/airsspec-core/src/state/: error.rs  machine.rs  mod.rs  progress.rs  traits.rs  types.rs  workflow.rs
crates/airsspec-core/src/tool/: mod.rs  traits.rs  types.rs
crates/airsspec-core/src/utils/: id.rs  mod.rs  slug.rs
crates/airsspec-core/src/validation/: context.rs  issue.rs  mod.rs  report.rs  severity.rs  traits.rs  validator.rs
crates/airsspec-core/src/validation/validators/: content.rs  dependencies.rs  mod.rs  state.rs  structure.rs
crates/airsspec-core/src/workspace/: config.rs  error.rs  info.rs  mod.rs  provider.rs
crates/airsspec-core/tests/: plan_workflow_tests.rs  spec_lifecycle_tests.rs  state_transitions_tests.rs  validation_integration_tests.rs
crates/airsspec-mcp/: Cargo.toml
crates/airsspec-mcp/src/: lib.rs
crates/airsspec-mcp/src/server/: builder.rs  error.rs  handler.rs  mod.rs
crates/airsspec-mcp/src/storage/: mod.rs  plan.rs  spec.rs  workspace.rs
crates/airsspec-mcp/src/validation/: mod.rs  runner.rs
crates/airsspec-runtime/: Cargo.toml
crates/airsspec-runtime/src/: lib.rs  orchestrator.rs  state_machine.rs
crates/airsspec-tui/: Cargo.toml
crates/airsspec-tui/src/: lib.rs  theme.rs
crates/airsspec-tui/src/reporter/: mod.rs  validation.rs
crates/airsspec-tui/src/widgets/: mod.rs  text_input.rs
crates/airsspec-tui/src/wizard/: mod.rs  runner.rs  state.rs  step.rs
crates/airsspec-tui/src/wizard/init/: confirmation.rs  mod.rs  project_description.rs  project_name.rs
crates/airsspec-tui/tests/: reporter_integration_tests.rs
docs/: ai-workflows.md  architecture.md  cli-tui-design-specification.md  context-compression-strategy.md  uow-bolt-spec.md
instructions/core/: README.md  constraints.md  memory.md  path-variables.md  philosophy.md  prompt-guidelines.md  workspace-explore.md  workspace-setup.md
instructions/phases/: construction.md  design.md  inception.md  ingestion.md  planning.md  research.md
instructions/workflows/: feature.md  hotfix.md
notebooks/: 2026-01-09-refactoring-instructions-to-markdown-and-lean-agents.md  2026-01-09-syncing-opencode-and-antigravity-agents.md  2026-01-10-halt-strategy-implementation.md  2026-01-10-roadmap-and-rust-workspace-setup.md  2026-01-10-uow001-setup-and-documentation-alignment.md  2026-01-11-agent-orchestration-code-quality-language-guidelines.md  2026-01-11-reviewer-and-rust-guidelines-integration.md  2026-01-12-uow002-setup-and-foundation-principle.md  2026-01-24-airsspec-conceptual-reset.md  README.md
plans/: 01-architecture-overview.md  02-crate-breakdown.md  03-domain-models.md  04-mcp-server.md  05-implementation-roadmap.md
researches/: agentic-workflows-and-tui.md  ddd-principles.md  openrouter-provider.md  pattern-cot.md  pattern-hybrid.md  pattern-react.md  pattern-tot.md  rca-daa-generation.md
templates/: README.md  airsspec.toml.example
templates/bolt/: PLAN.md  TASK.md  status.yaml
templates/uow/: ADR.md  DAA.md  RFC.md  requirements.md  status.yaml
(+86 files in other folders)
