[workspace]
resolver = "3"
members = [
    "crates/airsspec-core",
    "crates/airsspec-artifacts",
    "crates/airsspec-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["AirsSpec Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/airsstack/airsspec"
keywords = ["ai", "agents", "development", "lifecycle", "spec-driven"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
walkdir = "2.5"

# Schema validation
jsonschema = "0.29"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Internal crates
airsspec-core = { path = "crates/airsspec-core" }
airsspec-artifacts = { path = "crates/airsspec-artifacts" }
airsspec-runtime = { path = "crates/airsspec-runtime" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
