[package]
name = "airsspec-artifacts"
description = "Artifact validation and persistence for AirsSpec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
airsspec-core.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Schema validation
jsonschema.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
# Testing utilities will be added as needed
tempfile.workspace = true
