[package]
name = "airsspec-core"
description = "Core traits, types, and errors for AirsSpec - zero implementations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Async
async-trait.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
# Testing utilities will be added as needed
