[package]
name = "airsspec-core"
description = "Pure domain logic and trait abstractions for AirsSpec (zero I/O dependencies)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["mcp", "spec", "domain", "workflow"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
