[package]
name = "airsspec-mcp"
description = "MCP server implementation and I/O layer for AirsSpec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["mcp", "server", "protocol", "io"]
categories = ["development-tools"]

[dependencies]
airsspec-core = { workspace = true }
airsprotocols-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
