[package]
name = "airsspec-tui"
description = "Terminal UI components for AirsSpec (wizards, reporters, widgets)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["tui", "terminal", "ui", "ratatui"]
categories = ["development-tools"]

[dependencies]
airsspec-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[lints]
workspace = true
